Web Inspector: remove unused `frameId` property from timeline event data https://bugs.webkit.org/show_bug.cgi?id=286890
Reviewed by BJ Burg.

Nothing in the frontend uses `frameId`, so there's no need to provide it.

This will also massively simplify adding support for `Timeline` in `Worker`, as well as implenting PPO with respect to Web Inspector.

* Source/WebCore/inspector/agents/InspectorTimelineAgent.h:
* Source/WebCore/inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::internalStart):
(WebCore::InspectorTimelineAgent::startFromConsole):
(WebCore::InspectorTimelineAgent::stopFromConsole):
(WebCore::InspectorTimelineAgent::willCallFunction):
(WebCore::InspectorTimelineAgent::didCallFunction):
(WebCore::InspectorTimelineAgent::willDispatchEvent):
(WebCore::InspectorTimelineAgent::didInvalidateLayout):
(WebCore::InspectorTimelineAgent::willLayout):
(WebCore::InspectorTimelineAgent::didScheduleStyleRecalculation):
(WebCore::InspectorTimelineAgent::willRecalculateStyle):
(WebCore::InspectorTimelineAgent::willComposite):
(WebCore::InspectorTimelineAgent::willPaint):
(WebCore::InspectorTimelineAgent::didInstallTimer):
(WebCore::InspectorTimelineAgent::didRemoveTimer):
(WebCore::InspectorTimelineAgent::willFireTimer):
(WebCore::InspectorTimelineAgent::willEvaluateScript):
(WebCore::InspectorTimelineAgent::didEvaluateScript):
(WebCore::InspectorTimelineAgent::didTimeStamp):
(WebCore::InspectorTimelineAgent::time):
(WebCore::InspectorTimelineAgent::timeEnd):
(WebCore::InspectorTimelineAgent::didPerformanceMark):
(WebCore::InspectorTimelineAgent::captureScreenshot):
(WebCore::InspectorTimelineAgent::didRequestAnimationFrame):
(WebCore::InspectorTimelineAgent::didCancelAnimationFrame):
(WebCore::InspectorTimelineAgent::willFireAnimationFrame):
(WebCore::InspectorTimelineAgent::willFireObserverCallback):
(WebCore::InspectorTimelineAgent::breakpointActionProbe):
(WebCore::InspectorTimelineAgent::appendRecord):
(WebCore::InspectorTimelineAgent::cre

--- a/LayoutTests/inspector/timeline/line-column.html
+++ b/LayoutTests/inspector/timeline/line-column.html
@@ -56,7 +56,7 @@ function test()
         
         if (key === "children" && this.startTime)
             return value.filter(e => eventAllowlist.has(e.type));
-        if (key === "startTime" || key === "endTime" || key === "scriptId" || key === "frameId")
+        if (key === "startTime" || key === "endTime" || key === "scriptId")
             return "<filtered>";
         if ((key === "lineNumber" || key === "columnNumber") && !functionNameLength && !urlLength)
             return "<filtered>";
