--- a/LayoutTests/inspector/heap/getPreview.html
+++ b/LayoutTests/inspector/heap/getPreview.html
@@ -53,8 +53,8 @@ function test()
                 HeapAgent.snapshot((error, timestamp, snapshotStringData) => { // Newly created objects.
                     InspectorTest.expectThat(!error, "Should not have an error creating a snapshot.");
                     let workerProxy = WI.HeapSnapshotWorkerProxy.singleton();
-                    workerProxy.createSnapshot(snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
-                        let snapshot = WI.HeapSnapshotProxy.deserialize(objectId, serializedSnapshot);
+                    workerProxy.createSnapshot(WI.mainTarget.identifier, snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
+                        let snapshot = WI.HeapSnapshotProxy.deserialize(WI.mainTarget, objectId, serializedSnapshot);
                         snapshot.instancesWithClassName("string", (strings) => {
                             let heapSnapshotNode = strings.reduce((result, x) => result.id < x.id ? x : result, strings[0]);
                             HeapAgent.getPreview(heapSnapshotNode.id, (error, string, functionDetails, objectPreviewPayload) => {
@@ -78,8 +78,8 @@ function test()
                 HeapAgent.snapshot((error, timestamp, snapshotStringData) => { // Newly created objects.
                     InspectorTest.expectThat(!error, "Should not have an error creating a snapshot.");
                     let workerProxy = WI.HeapSnapshotWorkerProxy.singleton();
-                    workerProxy.createSnapshot(snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
-                        let snapshot = WI.HeapSnapshotProxy.deserialize(objectId, serializedSnapshot);
+                    workerProxy.createSnapshot(WI.mainTarget.identifier, snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
+                        let snapshot = WI.HeapSnapshotProxy.deserialize(WI.mainTarget, objectId, serializedSnapshot);
                         snapshot.instancesWithClassName("Function", (functions) => {
                             let heapSnapshotNode = functions.reduce((result, x) => result.id < x.id ? x : result, functions[0]);
                             HeapAgent.getPreview(heapSnapshotNode.id, (error, string, functionDetails, objectPreviewPayload) => {
@@ -103,8 +103,8 @@ function test()
                 HeapAgent.snapshot((error, timestamp, snapshotStringData) => { // Newly created objects.
                     InspectorTest.expectThat(!error, "Should not have an error creating a snapshot.");
                     let workerProxy = WI.HeapSnapshotWorkerProxy.singleton();
-                    workerProxy.createSnapshot(snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
-                        let snapshot = WI.HeapSnapshotProxy.deserialize(objectId, serializedSnapshot);
+                    workerProxy.createSnapshot(WI.mainTarget.identifier, snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
+                        let snapshot = WI.HeapSnapshotProxy.deserialize(WI.mainTarget, objectId, serializedSnapshot);
                         snapshot.instancesWithClassName("Map", (maps) => {
                             let heapSnapshotNode = maps.reduce((result, x) => result.id < x.id ? x : result, maps[0]);
                             HeapAgent.getPreview(heapSnapshotNode.id, (error, string, functionDetails, objectPreviewPayload) => {
@@ -143,8 +143,8 @@ function test()
                 HeapAgent.snapshot((error, timestamp, snapshotStringData) => { // Newly created objects.
                     InspectorTest.expectThat(!error, "Should not have an error creating a snapshot.");
                     let workerProxy = WI.HeapSnapshotWorkerProxy.singleton();
-                    workerProxy.createSnapshot(snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
-                        let snapshot = WI.HeapSnapshotProxy.deserialize(objectId, serializedSnapshot);
+                    workerProxy.createSnapshot(WI.mainTarget.identifier, snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
+                        let snapshot = WI.HeapSnapshotProxy.deserialize(WI.mainTarget, objectId, serializedSnapshot);
 
                         InspectorTest.evaluateInPage("triggerDeleteMapObject()");
                         HeapAgent.gc();
