--- a/LayoutTests/inspector/unit-tests/heap-snapshot-collection-event.html
+++ b/LayoutTests/inspector/unit-tests/heap-snapshot-collection-event.html
@@ -26,8 +26,8 @@ function test()
             HeapAgent.snapshot((error, timestamp, snapshotStringData) => {
                 InspectorTest.expectThat(!error, "Should not have an error creating a snapshot.");
                 let workerProxy = WI.HeapSnapshotWorkerProxy.singleton();
-                workerProxy.createSnapshot(snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
-                    snapshot = WI.HeapSnapshotProxy.deserialize(objectId, serializedSnapshot);
+                workerProxy.createSnapshot(WI.mainTarget.identifier, snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
+                    snapshot = WI.HeapSnapshotProxy.deserialize(WI.mainTarget, objectId, serializedSnapshot);
                     InspectorTest.expectThat(snapshot, "Should create HeapSnapshotProxy snapshot.");
                     resolve();
                 });
@@ -43,7 +43,7 @@ function test()
             let workerProxy = WI.HeapSnapshotWorkerProxy.singleton();
             HeapAgent.snapshot((error, timestamp, snapshotStringData) => {
                 InspectorTest.expectThat(!error, "Should not have an error creating a snapshot.");
-                workerProxy.createSnapshot(snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
+                workerProxy.createSnapshot(WI.mainTarget.identifier, snapshotStringData, ({objectId, snapshot: serializedSnapshot}) => {
                     // Ignore result. This should trigger the collection event.
                 });
             });
