webaudio/MediaStreamAudioSource/mediastreamaudiosourcenode.html fails https://bugs.webkit.org/show_bug.cgi?id=287331
Reviewed by Xabier Rodriguez-Calvar.

The test was failing because it was using navigator.webkitGetUserMedia which is no longer exposed.
The convoluted JS logic was simplified as well by making the test callback an async function.

* LayoutTests/TestExpectations:
* LayoutTests/webaudio/MediaStreamAudioSource/mediastreamaudiosourcenode-expected.txt:
* LayoutTests/webaudio/MediaStreamAudioSource/mediastreamaudiosourcenode.html:

Canonical link: https://commits.webkit.org/290155@main

--- a/LayoutTests/webaudio/MediaStreamAudioSource/mediastreamaudiosourcenode.html
+++ b/LayoutTests/webaudio/MediaStreamAudioSource/mediastreamaudiosourcenode.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <script id="layout-test-code">
+     if (window.testRunner)
+         testRunner.setUserMediaPermission(true);
+
       let audit = Audit.createTaskRunner();
 
       audit.define(
@@ -18,21 +21,10 @@
             label: 'test',
             description: 'Basic tests for MediaStreamAudioSourceNode API'
           },
-          (task, should) => {
-            should(
-                () => {navigator.webkitGetUserMedia(
-                    {audio: true},
-                    (stream) => {
-                      gotStream(stream, should);
-                      task.done();
-                    },
-                    () => {
-                      should(false, 'Stream generation')
-                          .message('succeeded', 'failed');
-                      task.done();
-                    })},
-                'getUserMedia()')
-                .notThrow();
+          async (task, should) => {
+            const stream = await navigator.mediaDevices.getUserMedia({audio: true});
+            gotStream(stream, should);
+            task.done();
           });
 
       audit.run();
